# clang-languageservice

./: .gitignore  CMakeLists.txt  _clang-format  boost.cmake  download-clang.cmake  initialize_params.hpp  json_rpc.hpp  json_serialization.hpp  language_service.cpp  language_service.hpp  llvm.cmake  main.cpp  peru.yaml  server.hpp
json_rpc/: httpish_transport.hpp  serialize.hpp  server.hpp  stdio_transport.hpp  stream_transport.hpp  windows_stdin_stream.cpp  windows_stdin_stream.hpp
langsrv/: CMakeLists.txt  cls_rename.cpp  compilation_database.hpp  language_service.cpp  language_service.hpp  opt_bind.hpp  protocol.hpp  protocol_types.hpp  serialize.hpp  types.hpp  types.in
